update apis for searching DB for wallets
